trunk/tests/jastadd/positive/L4/RecordDecl.ob
MODULE TestModule;
	VAR a : RECORD a : INTEGER; END;
END TestModule.
