trunk/tests/jastadd/negative/name_errors/L3/3_ProcScopeRules2.ob
MODULE TestModule;
    PROCEDURE g(h : INTEGER);
    	PROCEDURE h;           (* NOT OK *)
    	END h;
    END g;
BEGIN
END TestModule.
